// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transaction group queries fetches top traces 1`] = `
Object {
  "body": Object {
    "aggs": Object {
      "transaction_groups": Object {
        "aggs": Object {
          "avg": Object {
            "avg": Object {
              "field": "transaction.duration.us",
            },
          },
          "p95": Object {
            "percentiles": Object {
              "field": "transaction.duration.us",
              "hdr": Object {
                "number_of_significant_value_digits": 2,
              },
              "percents": Array [
                95,
              ],
            },
          },
          "sample": Object {
            "top_hits": Object {
              "size": 1,
              "sort": Array [
                Object {
                  "_score": "desc",
                },
                Object {
                  "@timestamp": Object {
                    "order": "desc",
                  },
                },
              ],
            },
          },
          "sum": Object {
            "sum": Object {
              "field": "transaction.duration.us",
            },
          },
        },
        "composite": Object {
          "size": 10000,
          "sources": Array [
            Object {
              "service": Object {
                "terms": Object {
                  "field": "service.name",
                },
              },
            },
            Object {
              "transaction": Object {
                "terms": Object {
                  "field": "transaction.name",
                },
              },
            },
          ],
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "processor.event": "transaction",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
        "must_not": Array [
          Object {
            "exists": Object {
              "field": "parent.id",
            },
          },
        ],
        "should": Array [
          Object {
            "term": Object {
              "transaction.sampled": true,
            },
          },
        ],
      },
    },
    "size": 0,
  },
  "index": "myIndex",
}
`;

exports[`transaction group queries fetches top transactions 1`] = `
Object {
  "body": Object {
    "aggs": Object {
      "transaction_groups": Object {
        "aggs": Object {
          "avg": Object {
            "avg": Object {
              "field": "transaction.duration.us",
            },
          },
          "p95": Object {
            "percentiles": Object {
              "field": "transaction.duration.us",
              "hdr": Object {
                "number_of_significant_value_digits": 2,
              },
              "percents": Array [
                95,
              ],
            },
          },
          "sample": Object {
            "top_hits": Object {
              "size": 1,
              "sort": Array [
                Object {
                  "_score": "desc",
                },
                Object {
                  "@timestamp": Object {
                    "order": "desc",
                  },
                },
              ],
            },
          },
          "sum": Object {
            "sum": Object {
              "field": "transaction.duration.us",
            },
          },
        },
        "composite": Object {
          "size": 101,
          "sources": Array [
            Object {
              "transaction": Object {
                "terms": Object {
                  "field": "transaction.name",
                },
              },
            },
          ],
        },
      },
      "transactions": Object {
        "terms": Object {
          "field": "transaction.name",
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "processor.event": "transaction",
            },
          },
          Object {
            "term": Object {
              "transaction.type": "bar",
            },
          },
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
        "should": Array [
          Object {
            "term": Object {
              "transaction.sampled": true,
            },
          },
        ],
      },
    },
    "size": 0,
  },
  "index": "myIndex",
}
`;
